--- a/DeliciousPizza/pom.xml
+++ b/DeliciousPizza/pom.xml
@@ -28,6 +28,11 @@
             <version>2.16.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.mindrot</groupId>
+            <artifactId>jbcrypt</artifactId>
+            <version>0.4</version>
+        </dependency>
 
     </dependencies>
 
