--- a/DeliciousPizza/pom.xml
+++ b/DeliciousPizza/pom.xml
@@ -52,7 +52,7 @@
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
             <version>4.11.0</version>
-            <scope>test</scope>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
